--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,14 @@
 {
 	"name": "Xplayer",
 	"short_name": "Xplayer",
-	"start_url": "/index.html",
+	"start_url": "./index.html",
 	"display": "standalone",
 	"background_color": "#000000",
 	"theme_color": "#f5f5",
 	"orientation": "portrait-primary",
 	"icons": [
 		{
-			"src": "/assets/imgs/play.png",
+			"src": "./assets/imgs/play.png",
 			"type": "image/png",
 			"sizes": "64x64"
 		}
